--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,15 +40,8 @@
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/search"
-                android:id="@+id/button_search"
-                android:layout_gravity="bottom"
-                android:layout_weight="1"/>
+            android:layout_height="match_parent"
+            android:layout_marginBottom="10dp">
 
             <Button
                 android:layout_width="wrap_content"
@@ -58,13 +51,6 @@
                 android:layout_gravity="bottom"
                 android:layout_weight="1"/>
 
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/settings"
-                android:id="@+id/button_settings"
-                android:layout_gravity="bottom"
-                android:layout_weight="1"/>
         </LinearLayout>
 
     </RelativeLayout>
