--- a/app/src/main/res/layout/activity_new_ad.xml
+++ b/app/src/main/res/layout/activity_new_ad.xml
@@ -41,7 +41,9 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/new_ad_category"
                 android:entries="@array/categories"
-                android:hint="@string/prompt_ad_category"/>
+                android:hint="@string/prompt_ad_category"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp" />
 
             <EditText
                 android:layout_width="match_parent"
@@ -72,7 +74,7 @@
                         android:layout_width="100dp"
                         android:layout_height="100dp"
                         android:id="@+id/new_ad_image"
-                        android:src="@drawable/powered_by_google_light"/>
+                        android:src="@drawable/greidan"/>
 
                 </LinearLayout>
             </HorizontalScrollView>
@@ -81,7 +83,8 @@
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/linearLayout" >
+                android:id="@+id/linearLayout"
+                android:layout_marginTop="10dp">
 
                 <Button
                     android:layout_width="wrap_content"
